#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(mod_swift, 0.1, mod_swift@surfertank.com)
AC_CONFIG_SRCDIR([src/mod_swift.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(mod_swift, 0.1)
AC_OUTPUT(Makefile src/Makefile)
AC_CONFIG_MACRO_DIRS([m4])

LT_INIT

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
